@@ -15,6 +15,11 @@ proxy_password =
 # Location where downloaded installation files should be cached
 cache_location = cache
 
+# Time in days before:-
+# - Cached application versions are updated
+# - Installer filenames without version information are redownloaded
+cache_timeout = 2
+
 [database]
 
 # Location to download latest DB from
